# aiida-defects

./: .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  README.rst  conftest.py  conftest.py.old  defect_workchain.py  pyproject.toml  pytest.ini  setup.json  setup.py  test.py
aiida_defects/: .coveragerc  __init__.py  utils.py
aiida_defects/biaxial_strain/: biaxial.py
aiida_defects/data/: data.py
aiida_defects/epsilon/: bulkepsilonberry.py  bulkepsilonsawtooth.py  slabepsilon.py
aiida_defects/formation_energy/: Test.py  bandfilling.py  common.py  defect_chemistry_base.py  defect_chemistry_qe.py  formation_energy.py  formation_energy_base.py  formation_energy_qe.py  formation_energy_siesta.py  makovpayne.py  pot_align.py  utils.py
aiida_defects/formation_energy_siesta/: DefectWorkflowExample-Manual.ipynb  DefectWorkflowExample.ipynb  DefectWorkflowExample.py  GaAs-test.xlsx  formation_energy_base.py  formation_energy_siesta.py  formation_energy_siesta.py-backup  formation_energy_siesta_manual.py  formation_energy_siesta_manual_wk_node.py  utils.py
aiida_defects/phonopy/: modulations.py  phonopy_tools.py
aiida_defects/pp/: fft_tools.py  pp.py
aiida_defects/tests/: README.rst  __init__.py
aiida_defects/tools/: defects.py  structure_manipulation.py
aiida_defects/workflows/: defect_workchain.py
biaxial_strain/: biaxial.py
docs/: README.md
docs/source/: conf.py  index.rst
epsilon/: bulkepsilonsawtooth.py  slabepsilon.py
examples/: ChemicalPotential.ipynb  DefectChemistry.ipynb  FormationEnergyQE.ipynb  GaussianCountercharge.ipynb  batio3_222.cif  defect-workflow.ipynb  lton_2.cif  makov_payne.ipynb  pp.ipynb  tools.ipynb
examples/.ipynb_checkpoints/: bandfilling-checkpoint.ipynb  pot_align_dec_2018-allpp-Copy1-checkpoint.ipynb  pot_align_dec_2018-allpp-checkpoint.ipynb
examples/LEGACY/: bandfilling.ipynb  batio3.cif  epsilon_bulk_berry.ipynb  epsilon_bulk_saw.ipynb  lz-potalign.ipynb  slab_epsilon.ipynb
examples/Structures/: Diamond_1x1x1.cif  Li3ClO_1x1x1.cif
examples_aiida_defects/: GaAs.cif  bandfilling.ipynb  defect-workflow.ipynb  epsilon_bulk_berry.ipynb  epsilon_bulk_saw.ipynb  lton_slab_2.cif  lz-potalign.ipynb  makov_payne.ipynb  pp.ipynb  si.cif  slab_epsilon.ipynb  tools.ipynb
examples_aiida_defects/.ipynb_checkpoints/: bandfilling-checkpoint.ipynb  pot_align_dec_2018-allpp-Copy1-checkpoint.ipynb  pot_align_dec_2018-allpp-checkpoint.ipynb
formation_energy/: bandfilling.py  makovpayne.py  pot_align.py
phonopy/: modulations.py
pp/: fft_tools.py  pp.py
tests/: __init__.py  bandfilling.py  conftest.py  makovpayne.py  pp.py  pytest.ini
tests/epsilon/: bulkepsilonsawtooth.py  slabepsilon.py
tools/: defects.py  structure_manipulation.py
(+101 files in other folders)
